tests/builtin_collision_const_allocator_bad.sl
// Verifies top-level const declarations cannot collide with public builtin types.
const Allocator = 1
